<resources>
    <string name="app_name">Teacher_Group1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="mangeUser">Manage User</string>
    <string name="creat_group">Create Group</string>
    <string name="creat_quiz">Create Quiz</string>
    <string name="histoery_quiz">History Quiz</string>


    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main__navi">MainActivity_Navi</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="quiz_name">Quiz Name:</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="send_to">Send To:</string>
    <string name="group_1">Group 1</string>
    <string name="resend">Resend</string>
    <string name="history_quiz_s">History Quiz\'s</string>
    <string-array name="user_status">
        <item>Approved


        </item>
        <item>Rejected</item>
        <item>Not Approved</item>
        <item>Blocked</item>
    </string-array>
</resources>
